[package]
name = "async-rusqlite"
version = "0.4.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A tiny executor agnostic wrapper around rusqlite to make calls to it async"
repository = "https://github.com/jsdw/async-rusqlite"

[dependencies]
asyncified = "0.6.1"
rusqlite = "0.29.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "sync"] }
